# Football-Data-Center

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  tox.ini
FootballDataCenter/: manage.py
FootballDataCenter/FootballDataCenter/: asgi.py  urls.py  views.py  wsgi.py
FootballDataCenter/Players/: models.py
FootballDataCenter/Players/migrations/: 0001_initial.py
FootballDataCenter/geo/: models.py
FootballDataCenter/geo/migrations/: 0001_initial.py
FootballDataCenter/leagues/: models.py
FootballDataCenter/leagues/migrations/: 0001_initial.py
FootballDataCenter/players/: models.py
FootballDataCenter/players/migrations/: 0001_initial.py  0005_baseplayerstatsfbref_assists_and_more.py  0006_baseplayerstatsfbref_progressive_carries_and_more.py
FootballDataCenter/players/templates/: home.html
FootballDataCenter/settings/: base.py  dev.py
FootballDataCenter/system/migrations/: 0001_initial.py
FootballDataCenter/teams/: models.py
FootballDataCenter/teams/migrations/: 0001_initial.py  0002_remove_baseteam_date_birth.py
FootballDataCenter/utils/: command_decorator.py  web_scrapper.py
requirements/: requirements.txt
src/geo/: models.py
src/main/: urls.py  views.py
src/main/templates/: base.html
src/players/: models.py
src/players/migrations/: 0002_baseplayerstatsfbref.py  0003_alter_baseplayerstatsfbref_original_position.py  0004_alter_baseplayerstatsfbref_as_starter_and_more.py
src/settings/: base.py  dev.py
src/system/: models.py
src/teams/: models.py
src/utils/: web_scrapper.py
(+15 files in other folders)
