[tool.poetry]
name = "football-data-center"
version = "0.1.0"
description = "Football Data Center, Analysis and more."
authors = ["JaimeOnaindia <jaime.onaindia@smyrooms.com>"]
license = "GPL-2.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "^3.7.2"
beautifulsoup4 = "^4.12.3"
certifi = "^2024.2.2"
django = "^5.0.2"
pandas = "^2.2.0"
psycopg2 = "^2.9.9"
requests = "^2.31.0"
redis = "^5.0.1"
django-redis = "^5.4.0"
unidecode = "^1.3.8"
lxml = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
